working for create/read/delete.  still need to be able to do single character page and update.

--- a/views/singlechar.handlebars
+++ b/views/singlechar.handlebars
@@ -1,330 +1,256 @@
-<div class="container">
-
-	<h2>D&D</h2>
-
-	<!-- Background Info 1-->	
-	<div class="row">
-		<div class="col-sm-4">
-			<h1>ENCOUNTERS</h1>
-		</div>
-
-		<div class="col-sm-2">
-			<p></p>
-			<h5>CLASS & LEVEL</h5>
-		</div>
-
-		<div class="col-sm-2">
-			<p></p>
-			<h5>BACKGROUND</h5>
-		</div>
-
-		<div class="col-sm-2">
-			<p></p>
-			<h5>PLAYER NAME</h5>
-		</div>
-
-		<div class="col-sm-2">
-			<p></p>
-			<h5>FACTION</h5>
-		</div>
-	</div>
-
-	<!-- Background Info 2-->	
-	<div class="row">
-
-		<div class="col-sm-4">
-			<p></p>
-			<h5>CHARACTER NAME</h5>
-		</div>
-
-		<div class="col-sm-2">
-			<p></p>
-			<h5>RACE</h5>
-		</div>
-
-		<div class="col-sm-2">
-			<p></p>
-			<h5>ALIGNMENT</h5>
-		</div>
-
-		<div class="col-sm-2">
-			<p></p>
-			<h5>EXPERIENCE POINTS</h5>
-		</div>
-
-		<div class="col-sm-2">
-			<p></p>
-			<h5>DCI NUMBER</h5>
-		</div>
-	</div>
-
-	<!-- Ability Scores -->
-	<div class="row">
-
-		<div class="col-sm-2">
-			<ul class="list-group">
-				<li class="list-group-item"><h5>STRENGTH</h5></li>
-				<li class="list-group-item">0</li>
-				<li class="list-group-item">0</li>
-			</ul>
-
-			<ul class="list-group">
-				<li class="list-group-item">0<h5>DEXTERITY</h5></li>
-				<li class="list-group-item">0</li>
-				<li class="list-group-item">0</li>
-			</ul>		
-
-			<ul class="list-group">
-				<li class="list-group-item"><h5>CONSTITUTION</h5></li>
-				<li class="list-group-item">0</li>
-				<li class="list-group-item">0</li>
-			</ul>
-
-			<ul class="list-group">
-				<li class="list-group-item">0<h5>INTELLIGENCE</h5></li>
-				<li class="list-group-item">0</li>
-				<li class="list-group-item">0</li>
-			</ul>		
-
-			<ul class="list-group">
-				<li class="list-group-item"><h5>WISDOM</h5></li>
-				<li class="list-group-item">0</li>
-				<li class="list-group-item">0</li>
-			</ul>		
-
-			<ul class="list-group">
-				<li class="list-group-item"><h5>CHARISMA</h5></li>
-				<li class="list-group-item">0</li>
-				<li class="list-group-item">0</li>
-			</ul>
-		</div>
-
-		<div class="col-sm-4">
-
-			<!-- Inspiration Score -->
-			<div class="well">
-				<p><span class="badge">0</span> INSPIRATION</p>
-			</div>
-
-			<!-- Proficiency Bonus -->			
-			<div class="well">
-				<p><span class="badge">0</span> PROFICIENCY BONUS</p>
-			</div>
-
-			<!-- Saving Throws -->
-			<div class="well">
-				<p><span class="badge">0</span> Strength</p>
-				<p><span class="badge">0</span> Dexterity</p>
-				<p><span class="badge">0</span> Constitution</p>
-				<p><span class="badge">0</span> Intelligence</p>				
-				<p><span class="badge">0</span> Wisdom</p>				
-				<p><span class="badge">0</span> Charisma</p>				
-				<h5>SAVING THROWS</h5>
-			</div>
-
-			<div class="well">
-				<p><span class="badge">0</span> Acrobatics (Dex)</p>
-				<p><span class="badge">0</span> Animal Handling (Wis)</p>
-				<p><span class="badge">0</span> Arcana (int)</p>				
-				<p><span class="badge">0</span> Athletics (Str)</p>				
-				<p><span class="badge">0</span> Deception (Cha)</p>
-				<p><span class="badge">0</span> History (Int)</p>				
-				<p><span class="badge">0</span> Insight (Wis)</p>				
-				<p><span class="badge">0</span> Intimidation (Cha)</p>				
-				<p><span class="badge">0</span> Investigation (Int)</p>				
-				<p><span class="badge">0</span> Medicine (Wis)</p>				
-				<p><span class="badge">0</span> Nature (Int)</p>				
-				<p><span class="badge">0</span> Perception (Wis)</p>								
-				<p><span class="badge">0</span> Performance (Cha)</p>								
-				<p><span class="badge">0</span> Persuasion (Cha)</p>								
-				<p><span class="badge">0</span> Religion (Int)</p>								
-				<p><span class="badge">0</span> Sleight of Hang (Dex)</p>								
-				<p><span class="badge">0</span> Stealth (Dex)</p>								
-				<p><span class="badge">0</span> Survival (Wis)</p>			
-				<h5>SKILLS</h5>
-			</div>
-
-			<div class="well">
-				<p><span class="badge">0</span> PASSIVE WISDOM (PERCEPTION)</p>
-			</div>
-
-			<div class="well">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nisi fringilla, posuere nunc ac, vulputate quam. Donec vitae purus ullamcorper, malesuada leo sed, faucibus velit. Nulla nec sapien neque. Sed semper ut leo luctus elementum. Sed tincidunt luctus lorem at blandit. Nullam ultricies fermentum sagittis. Vivamus lacinia lacinia arcu sed vestibulum. Sed sollicitudin pellentesque ligula sit amet ultrices. Nunc vitae magna tellus.</p>
-				<h5>OTHER PROFICIENCES & LANGUAGES</h5>
-			</div>
-		</div>
-
-		<div class="col-sm-3">
-
-			<!-- AC, INITIATIVE, SPEED -->
-			<div class="well">
-				<table class="table">
-					<tbody>
-						<tr>
-							<td><span class="badge">0</span></td>
-							<td><span class="badge">0</span></td>
-							<td><span class="badge">0</span></td>
-						</tr>
-					</tbody>
-
-					<tfoot>
-						<tr>
-							<td><h5>ARMOR CLASS</h5></td>
-							<td><h5>INITIATIVE</h5></td>
-							<td><h5>SPEED</h5></td>
-						</tr>
-					</tfoot>
-				</table>
-			</div>
-
-			<!-- Current Hit Points -->
-			<div class="well">
-				<p>Hit Point Maximum <span>0</span></p>
-				<h4>0</h4>
-				<h5>CURRENT HIT POINTS</h5>
-			</div>
-
-			<!-- Temporary Hit Points -->
-			<div class="well">
-				<h4>0</h4>
-				<h5>TEMPORARY HIT POINTS</h5>
-			</div>
-
-			<!-- Hit Dice and Death Saves -->
-			<div class="well">
-				<div class="row">
-					<div class="col-sm-6">
-						<div class="col-sm-6">
-							<p>Total</p> 
-						</div>
-						<div class="col-sm-6">
-							<p>1d8</p> 
-						</div>
-						<div class="col-sm-12">
-							<p>0</p>
-							<h6>HIT DICE</h6>
-						</div>
-					</div>
-					<div class="col-sm-6">
-						<div class="col-sm-12">
-							<p>SUCCESSES <span class="badge">0</span><span class="badge">0</span><span class="badge">0</span></p>
-							<p>FAILURES <span class="badge">0</span><span class="badge">0</span><span class="badge">0</span></p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<!-- ATTACKS & SPELLCASTING -->
-			<div class="well">
-				<div class="row">
-					<div class="col-sm-12">
-						<table class="table table-condensed">
-							<thead>
-								<tr>
-									<td>NAME</td>
-									<td>ATK BONUS</td>
-									<td>DAMAGE/ TYPE</td>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>Lorem ipsum</td>
-									<td>Lorem ipsum</td>
-									<td>Lorem ipsum</td>
-								</tr>
-								<tr>
-									<td>+0</td>
-									<td>+0</td>
-									<td>+0</td>
-								</tr>
-								<tr>
-									<td>Lorem ipsum</td>
-									<td>Lorem ipsum</td>
-									<td>Lorem ipsum</td>
-								</tr>
-							</tbody>
-						</table>
-						<p>Lorem ipsum dolor sit amet</p>
-						<p>consectetur adipiscing elit. Nulla tempus metus </p>
-						<p>nulla sit amet tortor ultricies iaculis. Fusce quis dui </p>
-						<p>consectetur facilisis eget mauris. Aenean dictum arcu sapien, </p>
-						<h5>ATTACKS & SPELLCASTING</h5>
-					</div>
-				</div>
-			</div>
-
-			<div class="well">
-				<div class="row">
-					<div class="col-sm-4">
-						<span class="badge">CP</span><span class="label label-default">0</span>
-						<span class="badge">SP</span><span class="label label-default">0</span>
-						<span class="badge">EP</span><span class="label label-default">0</span>
-						<span class="badge">GP</span><span class="label label-default">0</span>
-						<span class="badge">PP</span><span class="label label-default">0</span>
-					</div>
-					<div class="col-sm-8">
-						<p>Lorem ipsum</p>
-						<p>Lorem ipsum</p>
-						<p>Lorem ipsum</p>
-						<p>Lorem ipsum</p>
-						<p>Lorem ipsum</p>
-						<p>Lorem ipsum</p>
-						<p>Lorem ipsum</p>
-						<p>Lorem ipsum</p>
-						<h5>EQUIPMENT</h5>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-sm-3">
-
-			<!-- Personality Traits -->
-			<div class="well">
-				<p>Lorem ipsum</p>
-				<p>Lorem ipsum</p>
-				<p>Lorem ipsum</p>
-				<p>Lorem ipsum</p>
-				<p>Lorem ipsum</p>
-				<h5>PERSONALITY TRAITS</h5>
-			</div>
-			
-			<!-- Ideals -->
-			<div class="well">
-				<p>Lorem ipsum</p>
-				<p>Lorem ipsum</p>
-				<p>Lorem ipsum</p>
-				<h5>IDEALS</h5>
-			</div>
-
-			<!-- Bonds -->
-			<div class="well">
-				<p>Lorem ipsum</p>
-				<p>Lorem ipsum</p>
-				<p>Lorem ipsum</p>
-				<h5>BONDS</h5>
-			</div>
-			
-			<!-- Flaws -->
-			<div class="well">
-				<p>Lorem ipsum</p>
-				<p>Lorem ipsum</p>
-				<p>Lorem ipsum</p>
-				<h5>FLAWS</h5>
-			</div>
-			
-			<!-- Features and Traits -->
-			<div class="well">
-				<p>Lorem ipsum</p>
-				<p>Lorem ipsum</p>
-				<p>Lorem ipsum</p>
-				<h5>FEATURES & TRAITS</h5>
-			</div>
-			
-			
-			
-		</div>
-
-
-
-	</div>
+<div class='valign-wrapper row login-box'>
+  <div class='col card hoverable s10 pull-s1 m6 pull-m3 l4 pull-l4'>
+    <form>
+      <div class='card-content'>
+        <span class='card-title'>Add Your Character</span>
+        <div class='row'>
+          <div class='input-field col s12'>
+            <label for='name'>Name</label>
+            <input type='text' id='character-name'>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-class'>
+            <label for='class'>Class</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-level'>
+            <label for='level'>Level</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-background'>
+            <label for='background'>Background</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-player_name'>
+            <label for='player_name'>Player_name</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-faction'>
+            <label for='faction'>Faction</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-race'>
+            <label for='race'>Race</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-alignment'>
+            <label for='alignment'>Alignment</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-exp'>
+            <label for='exp'>Exp</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-inspiration'>
+            <label for='inspiration'>Inspiration</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-strength'>
+            <label for='strength'>Strength</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-dexterity'>
+            <label for='dexterity'>Dexterity</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-constitution'>
+            <label for='constitution'>Constitution</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-intelligence'>
+            <label for='intelligence'>Intelligence</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-wisdom'>
+            <label for='wisdom'>Wisdom</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-charisma'>
+            <label for='charisma'>Charisma</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-strength_st'>
+            <label for='strength_st'>Strength_st</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-dexterity_st'>
+            <label for='dexterity_st'>Dexterity_st</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-constitution_st'>
+            <label for='constitution_st'>Constitution_st</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-intelligence_st'>
+            <label for='intelligence_st'>Intelligence_st</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-wisdom_st'>
+            <label for='wisdom_st'>Wisdom_st</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-charisma_st'>
+            <label for='charisma_st'>Charisma_st</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-armor_class'>
+            <label for='armor_class'>Armor_class</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-initiative'>
+            <label for='initiative'>Inititative</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-speed'>
+            <label for='speed'>Speed</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-current_hp'>
+            <label for='current_hp'>Current_hp</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-temp_hp'>
+            <label for='temp_hp'>Temp_hp</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-personality_traits'>
+            <label for='personality_traits'>Personality_traits</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-ideals'>
+            <label for='ideals'>Ideals</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-bonds'>
+            <label for='bonds'>Bonds</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-flaws'>
+            <label for='flaws'>Flaws</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-attacks_and_spellcasting'>
+            <label for='attacks_and_spellcasting'>Attacks_and_spellcasting</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text'id='character-passive_wisdom'>
+            <label for='passive_wisdom'>Passive_wisdom</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-equipment'>
+            <label for='equipment'>Equipment</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-features_and_traits'>
+            <label for='features_and_traits'>Features_and_traits</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-other_proficiencies_and_languages'>
+            <label for='other_proficiences_and_languages'>Other_proficiencies_and_languages</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-age'>
+            <label for='age'>Age</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-height'>
+            <label for='height'>Height</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-weight'>
+            <label for='weight'>Weight</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-eyes'>
+            <label for='eyes'>Eyes</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-skin'>
+            <label for='skin'>Skin</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-hair'>
+            <label for='hair'>Hair</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-acrobatics'>
+            <label for='acrobatics'>Acrobatics</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-animal_handling'>
+            <label for='animal_handling'>Animal_handling</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-arcana'>
+            <label for='arcana'>Arcana</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-athletics'>
+            <label for='athletics'>Athletics</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-deception'>
+            <label for='deception'>Deception</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-history'>
+            <label for='history'>History</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-insight'>
+            <label for='insight'>Insight</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-intimidation'>
+            <label for='intimidation'>Intimidation</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-investigation'>
+            <label for='investigation'>Investigation</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-medicine'>
+            <label for='medicine'>Medicine</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-nature'>
+            <label for='nature'>Nature</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-perception'>
+            <label for='perception'>Perception</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-performance'>
+            <label for='performance'>Performance</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-persuasion'>
+            <label for='persuasion'>Persuasion</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-religion'>
+            <label for='religion'>Religion</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-sleight_of_hand'>
+            <label for='sleight_of_hand'>Sleight_of_hand</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-stealth'>
+            <label for='stealth'>Stealth</label>
+          </div>
+          <div class='input-field col s12'>
+            <input type='text' id='character-survival'>
+            <label for='survival'>Survival</label>
+          </div>
+        </div>
+      </div>
+      <div class='card-action right-align'>
+       
+        <input type='submit' class='btn green waves-effect waves-light' value='Create'>
+      </div>
+    </form>
+  </div>
+   <button id='create-button'> I'm a button </button>
+</div>
