got the single character sheet to display.  very happy update.

--- a/views/characters.handlebars
+++ b/views/characters.handlebars
@@ -10,7 +10,7 @@
           <p>Class: {{this.class}} <br/>Level: {{this.level}} <br/> Current HP: {{current_hp}}</p>
         </div>
         <div class="card-action">
-          <button class="waves-effect waves-light btn-small left shoBtn" data-id="{{this.id}}">More Info</button>
+          <a href="/characters/{{this.id}}" class="waves-effect waves-light btn-small left shoBtn" data-id="{{this.id}}">More Info</a>
           <button class="waves-effect waves-light btn-small right delBtn" data-id="{{this.id}}">Delete Character</button>
         </div>
       </div>
