--- a/views/singlechar.handlebars
+++ b/views/singlechar.handlebars
@@ -1,247 +1,249 @@
 <div class='valign-wrapper row login-box'>
   <div class='col card hoverable s10 pull-s1 m6 pull-m3 l4 pull-l4'>
+
     <form>
       <div class='card-content'>
-        <span class='card-title'>Add Your Character</span>
+        <span class='card-title'></span>
         <div class='row'>
           <div class='input-field col s12'>
             <label for='name'>Name</label>
-            <input type='text' id='character-name'>
+            <input type='text' id='character-name' placeholder={{characters.name}}>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-class'>
+            <input type='text' id='character-class' placeholder={{characters.class}}>
             <label for='class'>Class</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-level'>
+            <input type='text' id='character-level' placeholder={{characters.level}}>
             <label for='level'>Level</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-background'>
+            <input type='text' id='character-background' placeholder={{characters.background}}>
             <label for='background'>Background</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-player_name'>
+            <input type='text' id='character-player_name' placeholder={{characters.player_name}}>
             <label for='player_name'>Player_name</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-faction'>
+            <input type='text' id='character-faction'  placeholder={{characters.faction}}>
             <label for='faction'>Faction</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-race'>
+            <input type='text' id='character-race' placeholder={{characters.race}}>
             <label for='race'>Race</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-alignment'>
+            <input type='text' id='character-alignment'  placeholder={{characters.alignment}}>
             <label for='alignment'>Alignment</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-exp'>
+            <input type='text' id='character-exp' placeholder={{characters.exp}}>
             <label for='exp'>Exp</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-inspiration'>
+            <input type='text' id='character-inspiration' placeholder={{characters.inspiration}}>
             <label for='inspiration'>Inspiration</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-strength'>
+            <input type='text' id='character-strength' placeholder={{characters.strength}}>
             <label for='strength'>Strength</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-dexterity'>
+            <input type='text' id='character-dexterity' placeholder={{characters.dexterity}}>
             <label for='dexterity'>Dexterity</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-constitution'>
+            <input type='text' id='character-constitution' placeholder={{characters.constitution}}>
             <label for='constitution'>Constitution</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-intelligence'>
+            <input type='text' id='character-intelligence'  placeholder={{characters.intelligence}}>
             <label for='intelligence'>Intelligence</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-wisdom'>
+            <input type='text' id='character-wisdom' placeholder={{characters.wisdom}}>
             <label for='wisdom'>Wisdom</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-charisma'>
+            <input type='text' id='character-charisma' placeholder={{characters.charisma}}>
             <label for='charisma'>Charisma</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-strength_st'>
+            <input type='text' id='character-strength_st' placeholder={{characters.strength_st
+			}}>
             <label for='strength_st'>Strength_st</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-dexterity_st'>
+            <input type='text' id='character-dexterity_st' placeholder={{characters.dexterity_st}}>
             <label for='dexterity_st'>Dexterity_st</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-constitution_st'>
+            <input type='text' id='character-constitution_st' placeholder={{characters.constitution_st}}>
             <label for='constitution_st'>Constitution_st</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-intelligence_st'>
+            <input type='text' id='character-intelligence_st' placeholder={{characters.intelligence_st}}>
             <label for='intelligence_st'>Intelligence_st</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-wisdom_st'>
+            <input type='text' id='character-wisdom_st' placeholder={{characters.wisdom_st}}>
             <label for='wisdom_st'>Wisdom_st</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-charisma_st'>
+            <input type='text' id='character-charisma_st' placeholder={{characters.charisma_st}}>
             <label for='charisma_st'>Charisma_st</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-armor_class'>
+            <input type='text' id='character-armor_class' placeholder={{characters.armor_class}}>
             <label for='armor_class'>Armor_class</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-initiative'>
+            <input type='text' id='character-initiative' placeholder={{characters.initiative}}>
             <label for='initiative'>Inititative</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-speed'>
+            <input type='text' id='character-speed' placeholder={{characters.speed}}>
             <label for='speed'>Speed</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-current_hp'>
+            <input type='text' id='character-current_hp' placeholder={{characters.current_hp}}>
             <label for='current_hp'>Current_hp</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-temp_hp'>
+            <input type='text' id='character-temp_hp' placeholder={{characters.temp_hp}}>
             <label for='temp_hp'>Temp_hp</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-personality_traits'>
+            <input type='text' id='character-personality_traits' placeholder={{characters.personality_traits}}>
             <label for='personality_traits'>Personality_traits</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-ideals'>
+            <input type='text' id='character-ideals' placeholder={{characters.ideals}}>
             <label for='ideals'>Ideals</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-bonds'>
+            <input type='text' id='character-bonds' placeholder={{characters.bonds}}>
             <label for='bonds'>Bonds</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-flaws'>
+            <input type='text' id='character-flaws' placeholder={{characters.flaws}}>
             <label for='flaws'>Flaws</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-attacks_and_spellcasting'>
+            <input type='text' id='character-attacks_and_spellcasting' placeholder={{characters.attacks_and_spellcasting}}>
             <label for='attacks_and_spellcasting'>Attacks_and_spellcasting</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text'id='character-passive_wisdom'>
+            <input type='text'id='character-passive_wisdom' placeholder={{characters.passive_wisdom}}>
             <label for='passive_wisdom'>Passive_wisdom</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-equipment'>
+            <input type='text' id='character-equipment'  placeholder={{characters.equipment}}>
             <label for='equipment'>Equipment</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-features_and_traits'>
+            <input type='text' id='character-features_and_traits' placeholder={{characters.features_and_traits}}>
             <label for='features_and_traits'>Features_and_traits</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-other_proficiencies_and_languages'>
+            <input type='text' id='character-other_proficiencies_and_languages' placeholder={{characters.other_proficiences_and_languages}}>
             <label for='other_proficiences_and_languages'>Other_proficiencies_and_languages</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-age'>
+            <input type='text' id='character-age' placeholder={{characters.age}}>
             <label for='age'>Age</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-height'>
+            <input type='text' id='character-height' placeholder={{characters.height}}>
             <label for='height'>Height</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-weight'>
+            <input type='text' id='character-weight' placeholder={{characters.weight}}>
             <label for='weight'>Weight</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-eyes'>
+            <input type='text' id='character-eyes' placeholder={{characters.eyes}}>
             <label for='eyes'>Eyes</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-skin'>
+            <input type='text' id='character-skin' placeholder={{characters.skin}}>
             <label for='skin'>Skin</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-hair'>
+            <input type='text' id='character-hair' placeholder={{characters.hair}}>
             <label for='hair'>Hair</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-acrobatics'>
+            <input type='text' id='character-acrobatics' placeholder={{characters.acrobatics}}>
             <label for='acrobatics'>Acrobatics</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-animal_handling'>
+            <input type='text' id='character-animal_handling' placeholder={{characters.animal_handling}}>
             <label for='animal_handling'>Animal_handling</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-arcana'>
+            <input type='text' id='character-arcana' placeholder={{characters.arcana}}>
             <label for='arcana'>Arcana</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-athletics'>
+            <input type='text' id='character-athletics' placeholder={{characters.athletics}}>
             <label for='athletics'>Athletics</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-deception'>
+            <input type='text' id='character-deception' placeholder={{characters.deception}}>
             <label for='deception'>Deception</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-history'>
+            <input type='text' id='character-history' placeholder={{characters.history}}>
             <label for='history'>History</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-insight'>
+            <input type='text' id='character-insight' placeholder={{characters.insight}}>
             <label for='insight'>Insight</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-intimidation'>
+            <input type='text' id='character-intimidation' placeholder={{characters.intimidation}}>
             <label for='intimidation'>Intimidation</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-investigation'>
+            <input type='text' id='character-investigation' placeholder={{characters.investigation}}>
             <label for='investigation'>Investigation</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-medicine'>
+            <input type='text' id='character-medicine' placeholder={{characters.medicine}}>
             <label for='medicine'>Medicine</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-nature'>
+            <input type='text' id='character-nature' placeholder={{characters.nature}}>
             <label for='nature'>Nature</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-perception'>
+            <input type='text' id='character-perception' placeholder={{characters.perception}}>
             <label for='perception'>Perception</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-performance'>
+            <input type='text' id='character-performance' placeholder={{characters.performance}}>
             <label for='performance'>Performance</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-persuasion'>
+            <input type='text' id='character-persuasion' placeholder={{characters.persuasion}}>
             <label for='persuasion'>Persuasion</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-religion'>
+            <input type='text' id='character-religion' placeholder={{characters.religion}}>
             <label for='religion'>Religion</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-sleight_of_hand'>
+            <input type='text' id='character-sleight_of_hand' placeholder={{characters.sleight_of_hand}}>
             <label for='sleight_of_hand'>Sleight_of_hand</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-stealth'>
+            <input type='text' id='character-stealth' placeholder={{characters.stealth}}>
             <label for='stealth'>Stealth</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-survival'>
+            <input type='text' id='character-survival' placeholder={{characters.survival}}>
             <label for='survival'>Survival</label>
           </div>
         </div>
