--- a/views/singlechar.handlebars
+++ b/views/singlechar.handlebars
@@ -7,243 +7,243 @@
         <div class='row'>
           <div class='input-field col s12'>
             <label for='name'>Name</label>
-            <input type='text' id='character-name' placeholder={{characters.name}}>
+            <input type='text' id='character-name' value={{characters.name}}>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-class' placeholder={{characters.class}}>
+            <input type='text' id='character-class' value={{characters.class}}>
             <label for='class'>Class</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-level' placeholder={{characters.level}}>
+            <input type='text' id='character-level' value={{characters.level}}>
             <label for='level'>Level</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-background' placeholder={{characters.background}}>
+            <input type='text' id='character-background' value={{characters.background}}>
             <label for='background'>Background</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-player_name' placeholder={{characters.player_name}}>
+            <input type='text' id='character-player_name' value={{characters.player_name}}>
             <label for='player_name'>Player_name</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-faction'  placeholder={{characters.faction}}>
+            <input type='text' id='character-faction'  value={{characters.faction}}>
             <label for='faction'>Faction</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-race' placeholder={{characters.race}}>
+            <input type='text' id='character-race' value={{characters.race}}>
             <label for='race'>Race</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-alignment'  placeholder={{characters.alignment}}>
+            <input type='text' id='character-alignment'  value={{characters.alignment}}>
             <label for='alignment'>Alignment</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-exp' placeholder={{characters.exp}}>
+            <input type='text' id='character-exp' value={{characters.exp}}>
             <label for='exp'>Exp</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-inspiration' placeholder={{characters.inspiration}}>
+            <input type='text' id='character-inspiration' value={{characters.inspiration}}>
             <label for='inspiration'>Inspiration</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-strength' placeholder={{characters.strength}}>
+            <input type='text' id='character-strength' value={{characters.strength}}>
             <label for='strength'>Strength</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-dexterity' placeholder={{characters.dexterity}}>
+            <input type='text' id='character-dexterity' value={{characters.dexterity}}>
             <label for='dexterity'>Dexterity</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-constitution' placeholder={{characters.constitution}}>
+            <input type='text' id='character-constitution' value={{characters.constitution}}>
             <label for='constitution'>Constitution</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-intelligence'  placeholder={{characters.intelligence}}>
+            <input type='text' id='character-intelligence'  value={{characters.intelligence}}>
             <label for='intelligence'>Intelligence</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-wisdom' placeholder={{characters.wisdom}}>
+            <input type='text' id='character-wisdom' value={{characters.wisdom}}>
             <label for='wisdom'>Wisdom</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-charisma' placeholder={{characters.charisma}}>
+            <input type='text' id='character-charisma' value={{characters.charisma}}>
             <label for='charisma'>Charisma</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-strength_st' placeholder={{characters.strength_st
+            <input type='text' id='character-strength_st' value={{characters.strength_st
 			}}>
             <label for='strength_st'>Strength_st</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-dexterity_st' placeholder={{characters.dexterity_st}}>
+            <input type='text' id='character-dexterity_st' value={{characters.dexterity_st}}>
             <label for='dexterity_st'>Dexterity_st</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-constitution_st' placeholder={{characters.constitution_st}}>
+            <input type='text' id='character-constitution_st' value={{characters.constitution_st}}>
             <label for='constitution_st'>Constitution_st</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-intelligence_st' placeholder={{characters.intelligence_st}}>
+            <input type='text' id='character-intelligence_st' value={{characters.intelligence_st}}>
             <label for='intelligence_st'>Intelligence_st</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-wisdom_st' placeholder={{characters.wisdom_st}}>
+            <input type='text' id='character-wisdom_st' value={{characters.wisdom_st}}>
             <label for='wisdom_st'>Wisdom_st</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-charisma_st' placeholder={{characters.charisma_st}}>
+            <input type='text' id='character-charisma_st' value={{characters.charisma_st}}>
             <label for='charisma_st'>Charisma_st</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-armor_class' placeholder={{characters.armor_class}}>
+            <input type='text' id='character-armor_class' value={{characters.armor_class}}>
             <label for='armor_class'>Armor_class</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-initiative' placeholder={{characters.initiative}}>
+            <input type='text' id='character-initiative' value={{characters.initiative}}>
             <label for='initiative'>Inititative</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-speed' placeholder={{characters.speed}}>
+            <input type='text' id='character-speed' value={{characters.speed}}>
             <label for='speed'>Speed</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-current_hp' placeholder={{characters.current_hp}}>
+            <input type='text' id='character-current_hp' value={{characters.current_hp}}>
             <label for='current_hp'>Current_hp</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-temp_hp' placeholder={{characters.temp_hp}}>
+            <input type='text' id='character-temp_hp' value={{characters.temp_hp}}>
             <label for='temp_hp'>Temp_hp</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-personality_traits' placeholder={{characters.personality_traits}}>
+            <input type='text' id='character-personality_traits' value={{characters.personality_traits}}>
             <label for='personality_traits'>Personality_traits</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-ideals' placeholder={{characters.ideals}}>
+            <input type='text' id='character-ideals' value={{characters.ideals}}>
             <label for='ideals'>Ideals</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-bonds' placeholder={{characters.bonds}}>
+            <input type='text' id='character-bonds' value={{characters.bonds}}>
             <label for='bonds'>Bonds</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-flaws' placeholder={{characters.flaws}}>
+            <input type='text' id='character-flaws' value={{characters.flaws}}>
             <label for='flaws'>Flaws</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-attacks_and_spellcasting' placeholder={{characters.attacks_and_spellcasting}}>
+            <input type='text' id='character-attacks_and_spellcasting' value={{characters.attacks_and_spellcasting}}>
             <label for='attacks_and_spellcasting'>Attacks_and_spellcasting</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text'id='character-passive_wisdom' placeholder={{characters.passive_wisdom}}>
+            <input type='text'id='character-passive_wisdom' value={{characters.passive_wisdom}}>
             <label for='passive_wisdom'>Passive_wisdom</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-equipment'  placeholder={{characters.equipment}}>
+            <input type='text' id='character-equipment'  value={{characters.equipment}}>
             <label for='equipment'>Equipment</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-features_and_traits' placeholder={{characters.features_and_traits}}>
+            <input type='text' id='character-features_and_traits' value={{characters.features_and_traits}}>
             <label for='features_and_traits'>Features_and_traits</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-other_proficiencies_and_languages' placeholder={{characters.other_proficiences_and_languages}}>
+            <input type='text' id='character-other_proficiencies_and_languages' value={{characters.other_proficiences_and_languages}}>
             <label for='other_proficiences_and_languages'>Other_proficiencies_and_languages</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-age' placeholder={{characters.age}}>
+            <input type='text' id='character-age' value={{characters.age}}>
             <label for='age'>Age</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-height' placeholder={{characters.height}}>
+            <input type='text' id='character-height' value={{characters.height}}>
             <label for='height'>Height</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-weight' placeholder={{characters.weight}}>
+            <input type='text' id='character-weight' value={{characters.weight}}>
             <label for='weight'>Weight</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-eyes' placeholder={{characters.eyes}}>
+            <input type='text' id='character-eyes' value={{characters.eyes}}>
             <label for='eyes'>Eyes</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-skin' placeholder={{characters.skin}}>
+            <input type='text' id='character-skin' value={{characters.skin}}>
             <label for='skin'>Skin</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-hair' placeholder={{characters.hair}}>
+            <input type='text' id='character-hair' value={{characters.hair}}>
             <label for='hair'>Hair</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-acrobatics' placeholder={{characters.acrobatics}}>
+            <input type='text' id='character-acrobatics' value={{characters.acrobatics}}>
             <label for='acrobatics'>Acrobatics</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-animal_handling' placeholder={{characters.animal_handling}}>
+            <input type='text' id='character-animal_handling' value={{characters.animal_handling}}>
             <label for='animal_handling'>Animal_handling</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-arcana' placeholder={{characters.arcana}}>
+            <input type='text' id='character-arcana' value={{characters.arcana}}>
             <label for='arcana'>Arcana</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-athletics' placeholder={{characters.athletics}}>
+            <input type='text' id='character-athletics' value={{characters.athletics}}>
             <label for='athletics'>Athletics</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-deception' placeholder={{characters.deception}}>
+            <input type='text' id='character-deception' value={{characters.deception}}>
             <label for='deception'>Deception</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-history' placeholder={{characters.history}}>
+            <input type='text' id='character-history' value={{characters.history}}>
             <label for='history'>History</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-insight' placeholder={{characters.insight}}>
+            <input type='text' id='character-insight' value={{characters.insight}}>
             <label for='insight'>Insight</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-intimidation' placeholder={{characters.intimidation}}>
+            <input type='text' id='character-intimidation' value={{characters.intimidation}}>
             <label for='intimidation'>Intimidation</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-investigation' placeholder={{characters.investigation}}>
+            <input type='text' id='character-investigation' value={{characters.investigation}}>
             <label for='investigation'>Investigation</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-medicine' placeholder={{characters.medicine}}>
+            <input type='text' id='character-medicine' value={{characters.medicine}}>
             <label for='medicine'>Medicine</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-nature' placeholder={{characters.nature}}>
+            <input type='text' id='character-nature' value={{characters.nature}}>
             <label for='nature'>Nature</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-perception' placeholder={{characters.perception}}>
+            <input type='text' id='character-perception' value={{characters.perception}}>
             <label for='perception'>Perception</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-performance' placeholder={{characters.performance}}>
+            <input type='text' id='character-performance' value={{characters.performance}}>
             <label for='performance'>Performance</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-persuasion' placeholder={{characters.persuasion}}>
+            <input type='text' id='character-persuasion' value={{characters.persuasion}}>
             <label for='persuasion'>Persuasion</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-religion' placeholder={{characters.religion}}>
+            <input type='text' id='character-religion' value={{characters.religion}}>
             <label for='religion'>Religion</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-sleight_of_hand' placeholder={{characters.sleight_of_hand}}>
+            <input type='text' id='character-sleight_of_hand' value={{characters.sleight_of_hand}}>
             <label for='sleight_of_hand'>Sleight_of_hand</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-stealth' placeholder={{characters.stealth}}>
+            <input type='text' id='character-stealth' value={{characters.stealth}}>
             <label for='stealth'>Stealth</label>
           </div>
           <div class='input-field col s12'>
-            <input type='text' id='character-survival' placeholder={{characters.survival}}>
+            <input type='text' id='character-survival' value={{characters.survival}}>
             <label for='survival'>Survival</label>
           </div>
         </div>
@@ -254,5 +254,5 @@
       </div>
     </form>
   </div>
-   <button id='create-button'> I'm a button </button>
+   <button id='update-button'> I'm a button </button>
 </div>
