fixed issue with controller.js not being registered by singlechar.handlebars.  almost finished with put

--- a/views/singlechar.handlebars
+++ b/views/singlechar.handlebars
@@ -256,3 +256,5 @@
   </div>
    <button id='update-button'> I'm a button </button>
 </div>
+
+<script>$('#update-button').on('click', console.log('button clicked'));</script>
