--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -69,7 +69,7 @@
                         </div>
                         <div class="col m3 s12">
                             <a href="https://github.com/FlashOTFR">Randy Burgess</a><img class="teammate"
-                                src="../../../assets/images/Iss.JPG" alt="" srcset=""></a>
+                                src="../../../assets/images/Randy.jpeg" alt="" srcset=""></a>
                         </div>
                         <div class="col m3 s12">
                             <a href="https://github.com/Issouf03">Issouf <br> Kiema</a><img class="teammate"
